# Snapchat-editor

./: .gitignore
.github/workflows/: release.yml
mockups/: app-qol.html  data-source-comparison.html  gps-map-picker.html  sounds.html  trending-qol.html  trending-tab.html
scripts/: release-setup.sh
src-tauri/: Cargo.toml  make_icon.py  tauri.conf.json
src-tauri/binaries/: heif-enc-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
