[package]
name = "snap-caption-studio"
version = "1.0.0"
description = "Snap Caption Studio — native build"
authors = ["seraphimmgmt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "macros", "time", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
